--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "ejs": "~2.3.3",
     "express": "~4.13.1",
     "morgan": "~1.6.1",
+    "passport-facebook": "^2.1.1",
+    "passport-twitter": "^1.0.4",
     "serve-favicon": "~2.3.0"
   }
 }
