--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,8 @@
     "bower_components"
   ],
   "dependencies": {
-    "jquery": "^3.1.0"
+    "jquery": "^3.1.0",
+    "polymer": "polymer/polymer#^1.6.1",
+    "mdi": "^1.7.12"
   }
 }
