--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
   "dependencies": {
     "accept-language": "^2.0.17",
     "body-parser": "~1.13.2",
+    "calcium": "^0.4.2",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "ejs": "~2.3.3",
     "express": "~4.13.1",
+    "express-session": "^1.14.1",
     "morgan": "~1.6.1",
     "passport-facebook": "^2.1.1",
     "passport-twitter": "^1.0.4",
